# advent_of_code_2023

./: README.md
01/James/: index.html
01/r/: .gitignore  Makefile  Trebuchet.hs  Trebuchet2.hs
02/r/: .gitignore  CubeConundrum.cabal  Game.hs  Makefile  input
03/r/: GearRatios.hs  Makefile
04/r/: Makefile  Scratchcards.hs
05/r/: Fertilizer.hs  Makefile
06/r/: Makefile  Wait.hs
07/r/: CamelCards.hs  Makefile
08/r/: HauntedWasteland.hs  Makefile
09/r/: Makefile  MirageMaintenance.hs
10/r/: .gitignore  Makefile  PipeMaze.cabal  PipeMaze.hs
