cabal-version:  3.0
name:           CubeConundrum
version:        0.1.0.0
license:        NONE
author:         byllgrim
maintainer:     myemail

executable CubeConundrum
  main-is:
    CubeConundrum.hs
  default-language:
    Haskell2010
  ghc-options:
    -Wall -dynamic
  build-depends:
    base          ^>=4.15.1.0,
    text          ^>=1.2.5.0,
    split         ^>=0.2.4,
    regex-compat  ^>=0.95.2.1,
    pretty-simple ^>=4.1.2.0
